Add Tycheros Monitoring Service with EF and UI integration
Introduced TycherosMonitoringService with CRUD operations and integrated it into the application. Configured Entity Framework Core for MariaDB in the project and added sample UI for data fetching. Updated settings and dependencies to support the new service.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "TycherosMonitoring": "Server=localhost;Database=tycherosmonitoring;User=dick;Password=Sandy2836;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
