Switch to SQL Server and enhance data models
Migrated from MySQL to SQL Server by updating connection strings and dependencies. Improved `Collectedapidatum` model with new data annotations and computed columns. Enhanced `PeriodicApiService` for better data handling and grid toggling in the UI.

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "TycherosMonitoring": "Server=localhost;Database=tycherosmonitoring;User=dick1;Password=Sandy2836;"
+    "TycherosMonitoring": "data source=(local);initial catalog=TycherosMonitoring;persist security info=True;user id=sa;password=k%q7h3x;MultipleActiveResultSets=True;App=MCSLotteryAdminMembership;Encrypt=False"
   },
   "Logging": {
     "LogLevel": {
